# serveur/controllers/Gender.js
@@ -13,8 +13,8 @@ module.exports.gendersGET = function gendersGET (req, res, next, page) {
     });
 };
 
-module.exports.gendersNameDELETE = function gendersNameDELETE (req, res, next, name) {
-  Gender.gendersNameDELETE(name)
+module.exports.gendersId_genderDELETE = function gendersId_genderDELETE (req, res, next, id_gender) {
+  Gender.gendersId_genderDELETE(id_gender)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -23,8 +23,8 @@ module.exports.gendersNameDELETE = function gendersNameDELETE (req, res, next, n
     });
 };
 
-module.exports.gendersNameGET = function gendersNameGET (req, res, next, name) {
-  Gender.gendersNameGET(name)
+module.exports.gendersId_genderGET = function gendersId_genderGET (req, res, next, id_gender) {
+  Gender.gendersId_genderGET(id_gender)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -33,8 +33,8 @@ module.exports.gendersNameGET = function gendersNameGET (req, res, next, name) {
     });
 };
 
-module.exports.gendersNameGamesGET = function gendersNameGamesGET (req, res, next, name) {
-  Gender.gendersNameGamesGET(name)
+module.exports.gendersId_genderGamesGET = function gendersId_genderGamesGET (req, res, next, id_gender) {
+  Gender.gendersId_genderGamesGET(id_gender)
     .then(function (response) {
       utils.writeJson(res, response);
     })
