# serveur/controllers/Platform.js
@@ -13,6 +13,36 @@ module.exports.platformsGET = function platformsGET (req, res, next, page) {
     });
 };
 
+module.exports.platformsId_platformDELETE = function platformsId_platformDELETE (req, res, next, id_platform) {
+  Platform.platformsId_platformDELETE(id_platform)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.platformsId_platformGET = function platformsId_platformGET (req, res, next, id_platform) {
+  Platform.platformsId_platformGET(id_platform)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
+module.exports.platformsId_platformGamesGET = function platformsId_platformGamesGET (req, res, next, id_platform) {
+  Platform.platformsId_platformGamesGET(id_platform)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.platformsId_platformGamesId_gamePUT = function platformsId_platformGamesId_gamePUT (req, res, next, body, id_platform, id_game) {
   Platform.platformsId_platformGamesId_gamePUT(body, id_platform, id_game)
     .then(function (response) {
@@ -23,38 +53,8 @@ module.exports.platformsId_platformGamesId_gamePUT = function platformsId_platfo
     });
 };
 
-module.exports.platformsNameDELETE = function platformsNameDELETE (req, res, next, name) {
-  Platform.platformsNameDELETE(name)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.platformsNameGET = function platformsNameGET (req, res, next, name) {
-  Platform.platformsNameGET(name)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.platformsNameGamesGET = function platformsNameGamesGET (req, res, next, name) {
-  Platform.platformsNameGamesGET(name)
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
-};
-
-module.exports.platformsNamePOST = function platformsNamePOST (req, res, next, body, name) {
-  Platform.platformsNamePOST(body, name)
+module.exports.platformsId_platformPOST = function platformsId_platformPOST (req, res, next, body, id_platform) {
+  Platform.platformsId_platformPOST(body, id_platform)
     .then(function (response) {
       utils.writeJson(res, response);
     })
